@@ -126,6 +126,7 @@ export(abbreviateTimeLabels,
        mapPolygon,
        mapScalebar,
        mapText,
+       mapTissot,
        mapZones,
        map2lonlat,
        matchBytes,
